[gd_scene load_steps=2 format=2]

[ext_resource path="res://ContainsTodoList.gd" type="Script" id=1]

[node name="ContainsTodoList" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TodoItems" type="ItemList" parent="."]
light_mask = 0
margin_right = 592.0
margin_bottom = 617.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9

[node name="NewItem" type="Label" parent="."]
margin_top = 621.0
margin_right = 592.0
margin_bottom = 635.0
text = "New Item"
align = 1

[node name="AddItem" type="HBoxContainer" parent="."]
margin_top = 639.0
margin_right = 592.0
margin_bottom = 663.0
__meta__ = {
"_edit_group_": true
}

[node name="ItemName" type="LineEdit" parent="AddItem"]
margin_right = 551.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "TODO item"

[node name="AddItemButton" type="Button" parent="AddItem"]
margin_left = 555.0
margin_right = 592.0
margin_bottom = 24.0
text = "Add"

[connection signal="item_activated" from="TodoItems" to="." method="_on_TodoItems_item_activated"]
[connection signal="item_selected" from="TodoItems" to="." method="_on_TodoItems_item_selected"]
[connection signal="text_entered" from="AddItem/ItemName" to="." method="_on_ItemName_text_entered"]
[connection signal="pressed" from="AddItem/AddItemButton" to="." method="_on_AddItemButton_pressed"]
